--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+
+    <div id="root" role="main">
+        <h1>Hello</h1>
+
+        <div class="container">
+            <div>Container</div>
+        </div>
+    </div>
+
 </body>
 </html>
